the parent element main height has been change to 450px inorder to avoid the vertical overflowing of the cards

--- a/style.css
+++ b/style.css
@@ -38,10 +38,10 @@ p{
 main{
     margin: auto;
     width: 80%;
+    height: 450px;
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100vh;
     flex-wrap: wrap;
 }
 
@@ -60,7 +60,6 @@ main{
     background-color: hsl(31, 77%, 52%);
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
-
 }
 
 
